# flaredeck

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DESIGN.md  DOMAIN-MODEL.md  LICENSE  MANIFEST.md  PATCH-NOTES.md  PLAN.md  PRODUCT-SCOPE.md  README.md  RELEASING.md  TECHNICAL.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.agentkanban/: board.yaml
.github/: dependabot.yml
examples/: agentic-kanban-task-example.md  opencode.jsonc
prompts/: 00-MASTER-AI-DEVELOPMENT-PROMPT.md  01-PHASE-0-DISCOVERY-BASELINE-PROMPT.md  02-PHASE-1-REPOSITORY-READINESS-PROMPT.md  03-PHASE-2-DOMAIN-SERVICE-EXTRACTION-PROMPT.md  04-PHASE-3-HEADLESS-CLI-PROMPT.md  05-PHASE-4-WORKSPACE-SESSION-ORCHESTRATION-PROMPT.md  06-PHASE-5-MCP-SERVER-PROMPT.md  08-PHASE-7-DESKTOP-UX-PROMPT.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cf_api.rs  cloudflared.rs  error.rs  lib.rs  main.rs  secrets.rs  state.rs  types.rs
src-tauri/src/application/: audit_service.rs  context.rs  health_service.rs  mod.rs  profile_service.rs  route_service.rs  runtime_service.rs  session_service.rs  state_paths.rs  temporary_route_service.rs  trust_service.rs  tunnel_service.rs  webhook_service.rs  workspace_registry.rs  workspace_service.rs
src-tauri/src/commands/: auth.rs  cf.rs  config.rs  dns.rs  mod.rs  network.rs  prefs.rs  profiles.rs  shell.rs  tunnel.rs  workspace.rs  wsl.rs
src-tauri/tests/: cli_contract.rs  mcp_protocol.rs  webhook_proxy.rs
(+106 files in other folders)
