[package]
name = "flaredeck"
version = "0.2.3"
description = "A local development publish manager for Cloudflare Tunnel"
authors = ["FlareDeck contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "flaredeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
hickory-resolver = "0.24"
base64 = "0.22"
chacha20poly1305 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
thiserror = "1"
tokio = { version = "1", features = ["fs", "net", "process", "time", "macros", "io-util"] }
uuid = { version = "1", features = ["v4"] }
which = "6"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
